<resources>
    <string name="app_name">e-Games</string>

    <!-- Main Acivity -->
    <string name="main_title">Selecciona un juego</string>
    <string name="main_game_1">Infiltrado</string>
    <string name="main_game_2">Espía</string>
    <string name="main_game_3">Psicólogo</string>
    <string name="main_game_4">Ladrón</string>

    <!-- SetRules Acivity -->
    <string name="rules_title">Establece las reglas del juego</string>
    <string name="rules_players">4 jugadores</string>
    <string name="rules_infiltrados">1 infiltrado</string>
    <string name="rules_database">Random</string>
    <string name="rules_play">Jugar</string>
    <!--*** SetRules java Class ***-->
    <string name="rules_random">Random</string>
    <string name="rules_random_infiltrados">Número de infiltrados aleatorio</string>
    <string name="rules_num_infiltrados">%1$d infiltrados</string>
    <string name="rules_num_players">%1$d jugadores</string>
    <string name="rules_1_player">1 jugador</string>


    <!-- Select Players Activity -->
    <string name="players_title">Edita los jugadores</string>
    <!--*** Item Select Player ***-->
    <string name="players_delete">DELETE</string>
    <string name="players_name">Player 0</string>


    <!-- Game Activity -->
    <!--*** Popup Reveal Role ***-->
    <string name="game_X">X</string>
    <string name="game_player_name">Player 0</string>
    <string name="game_player_role">Infiltrado</string>
    <string name="game_block">Bloquear</string>
    <!--*** Settings ***-->
    <string name="game_settings">Settings</string>
    <string name="action_restart_game">Restart game</string>
    <string name="action_edit_players">Edit players</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_log">Log</string>


    <string name="title_activity_settings">Settings</string>
</resources>
