<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- "Mark Favorite", should appear as action button if possible -->
    <item
        android:id="@+id/action_new_game"
        android:icon="@android:drawable/ic_menu_rotate"
        android:title="@string/action_restart_game"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/edit_players"
        android:title="@string/action_edit_players" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/help"
        android:title="@string/action_help" />
    <item
        android:id="@+id/infi"
        android:title="@string/action_log" />
</menu>